multi-ldap (1.1.4)
  * Fix LDAP session handling
-- Jul 29 2010

multi-ldap (1.1.3)
  * Add Thunderbird 3.1 compatibility
  * Fix UI refresh when adding/removing directories
-- Jul 28 2010

multi-ldap (1.1.2)
  * Fix LDAP authentication with password under Thunderbird 3
-- May 7 2010

multi-ldap (1.1.1)
  * Default minimum search string length is now 1
  * Fix settings migration under Thunderbird 2
-- Apr 22 2010

multi-ldap (1.1.0)
  * Update add-on for Thunderbird 3
-- Feb 19 2010

multi-ldap (1.0.0)
  * Tag version 1
  * ChangeLog/README
-- Apr 7 2009

multi-ldap (0.2.6)
  * Fix bug #4195: autocompletion issue from 2 directories
  * Fix bug #4095: fetching certificate from LDAP when sending an email
  * Refactoring

multi-ldap (0.2.5.0)
  * Add update.rdf file to the extension. Manage the update feature.

multi-ldap (0.2.4.0)
  * Fix for [#484] Data are saved on cancel
  * Fix for [#491] LDAP User properties test plan
  * Fix for [#492] userA properties change userB properties
  * Fix for [#494] User account properties are saved on cancel.
  * Fix for [#495] Uncheck the collected address disable the autocompletion.
  * Fix for [#496] ldap_2.autoComplete.useDirectory set to false disable the autocompletion.
  * Fix for [#497] the string 'Use Custom Preferences' from account settings is not localized.
  * Fix for [#504] If the name of a server is the beginning of another one, it is automatically selected.

multi-ldap (0.2.3.0)
  * Fix for [#475] autoComplete.ldapServers not updated

multi-ldap (0.2.2.0)
  * Fix for [#465] multildap_OriginalReleaseGlobalVariables is not defined.

multi-ldap (0.2.1.0)
  * Fix for [#460] bad display when you select a LDAP in the configuration.
  * Fix for [#461] First auto-completion done with only the last server.

multi-ldap (0.2.0.0)
  * First working release