@@ -4,3 +4,5 @@ editDirectories = Edit Directories...
 editDirectories.accesskey = E
 autocompleteAfter = Autocomplete from directories after
 characters = characters
+noneDefaultDirectory = None
+defaultDirectoryTooltip= For add-ons not compatible with Multi-LDAP
