@@ -4,3 +4,5 @@ editDirectories = Modifier les annuaires...
 editDirectories.accesskey = M
 autocompleteAfter = Auto-complétion depuis les annuaires après
 characters = caractères
+noneDefaultDirectory = Aucun
+defaultDirectoryTooltip= Pour les modules non-compatibles avec Multi-LDAP
